# TestTask

./: .envExample  Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml
src/domain/dto/: base.py  main.py
src/domain/exceptions/: main.py
src/domain/protocols/: inmemory.py
src/domain/usecases/: base.py  main.py
src/infrastructure/: config.py
src/infrastructure/redis/: config.py  main.py  service.py
src/presentation/: __main__.py
src/presentation/api/: main.py
src/presentation/api/controllers/: __init__.py  requests.py  responses.py  router.py
src/presentation/api/di/: __init__.py  adapters.py  services.py
