[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["MikhailBR <mishabur38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
setuptools = "^74.1.2"
redis = "^5.0.8"
pre-commit = "^3.8.0"
types-redis = "^4.6.0.20240903"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
